Updated handle styling with drop shadow and lines.

--- a/px-handle.html
+++ b/px-handle.html
@@ -27,6 +27,11 @@ Element providing solution to no problem in particular. As a simple, increments 
           on-down="handleDown"
           on-up="handleUp"
           on-track="handleTrack">
+            <svg class="u-p0 u-m0" xmlns="http://www.w3.org/2000/svg" width="19" height="19">
+                <rect x="6" y="6" width="1" height="7" />
+                <rect x="9" y="6" width="1" height="7" />
+                <rect x="12" y="6" width="1" height="7" />
+            </svg> 
         </div>
     </template>
 </dom-module>
