--- a/px-handle.html
+++ b/px-handle.html
@@ -23,16 +23,16 @@ Element providing solution to no problem in particular. As a simple, increments 
 <dom-module id="px-handle">
     <link rel="import" type="css" href="css/px-handle.css"/>
     <template>
-        <div id="handleTarget"
+        <button id="handleTarget"
           on-down="handleDown"
           on-up="handleUp"
           on-track="handleTrack">
-            <svg class="u-p0 u-m0" xmlns="http://www.w3.org/2000/svg" width="19" height="19">
-                <rect x="6" y="6" width="1" height="7" />
-                <rect x="9" y="6" width="1" height="7" />
-                <rect x="12" y="6" width="1" height="7" />
-            </svg> 
-        </div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19">
+                <rect x="0" y="3" width="1" height="7" />
+                <rect x="3" y="3" width="1" height="7" />
+                <rect x="6" y="3" width="1" height="7" />
+            </svg>
+        </button>
     </template>
 </dom-module>
 
@@ -49,7 +49,7 @@ Element providing solution to no problem in particular. As a simple, increments 
              */
             tracking: {
                 type: Boolean,
-                value: false, 
+                value: false,
                 readOnly: true,
                 observer: '_trackingChanged'
             },
