Fix svg position inside button. Add boilerplate scss for normalise etc.

--- a/px-handle.html
+++ b/px-handle.html
@@ -27,10 +27,10 @@ Element providing solution to no problem in particular. As a simple, increments 
           on-down="handleDown"
           on-up="handleUp"
           on-track="handleTrack">
-            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19">
+            <svg class="u--ml-1" xmlns="http://www.w3.org/2000/svg" width="19" height="19">
                 <rect x="0" y="3" width="1" height="7" />
                 <rect x="3" y="3" width="1" height="7" />
-                <rect x="6" y="3" width="1" height="7" />
+                <rect x="6" y="3" width="1" height="7" />  
             </svg>
         </button>
     </template>
