--- a/demo.html
+++ b/demo.html
@@ -10,6 +10,11 @@
     <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
     <!-- Import custom element. Note: see comment about relative paths to dependencies in the *.html file referenced below -->
     <link rel="import" href="px-slider.html" />
+    <style>
+      html {
+        font-size: .9375rem;
+      }
+    </style>
   </head>
 
   <body>
