Removed surplus custom spacing class

--- a/px-handle.html
+++ b/px-handle.html
@@ -23,7 +23,7 @@ Element providing solution to no problem in particular. As a simple, increments 
   <link rel="import" type="css" href="css/px-handle.css" />
   <template>
     <button id="handleTarget" on-down="handleDown" on-up="handleUp" on-track="handleTrack">
-      <svg class="u--ml-1" xmlns="http://www.w3.org/2000/svg" width="19" height="19">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
         <rect x="0" y="3" width="1" height="7" />
         <rect x="3" y="3" width="1" height="7" />
         <rect x="6" y="3" width="1" height="7" />
