--- a/demo.html
+++ b/demo.html
@@ -8,9 +8,11 @@
     <title>px-slider Demo</title>
     <!-- Requires Webcomponents.js polyfill is provided by the page for browsers that don't support html imports -->
     <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <!-- Import custom element. Note: see comment about relative paths to dependencies in the *.html file referenced below -->
     <link rel="import" href="../px-theme/px-theme.html" />
     <link rel="import" href="px-slider.html" />
+    <link rel="import" href="demo-nested.html" />
     <style>
       html {
         font-size: .9375rem;
@@ -39,6 +41,48 @@
       <div style="width: 400px">
         <px-slider value="150" min="0" max="500" step="50">
       </div>
+
+      <h4>Demonstrate px-slider bugs</h4>
+      <template id="my-slider" is="dom-bind">
+
+        <slider-container range-values="{{rangeValues}}">
+        </slider-container>
+
+        <slider-container range-values="{{infiniteLoopRangeValues}}">
+        </slider-container>
+
+        <!--
+        <px-slider id="slider1"
+          start-value="10"
+          end-value="40"
+          min="{{dataMin}}"
+          max="{{dataMax}}">
+        </px-slider>
+        <px-slider id="slider2"
+                   start-value="10"
+                   end-value="60"
+                   min="{{dataMin}}"
+                   max="{{dataMax}}">
+        </px-slider>
+        -->
+      </template>
+      <script>
+        var tmpl = document.querySelector('#my-slider');
+        var slider1 = document.querySelector('#slider1')
+        var slider2 = document.querySelector('#slider2')
+        $(document).ready(function() {
+          tmpl.dataMin = 0;
+          tmpl.dataMax = 50;
+
+          tmpl.rangeValues = {
+            dataMin: 0, dataMax: 1000, startValue: 10, endValue: 150
+          };
+
+          tmpl.infiniteLoopRangeValues = {
+            dataMin: 0.25, dataMax: 251.35, startValue: 10, endValue: 252
+          };
+        });
+      </script>
   </body>
 
 </html>
